# abiopetaja

./: .envrc  .gitignore  =1.2.0  README.md  add_spec.py  ai_example  ai_example.txt  ai_example2.txt  ai_raw_output.txt  ai_raw_output2.txt  data.env  db.sqlite3:Zone.Identifier  flake.nix  manage.py  problems (2).json:Zone.Identifier  problems (3).json:Zone.Identifier  problems.json  problemsestonian.json  problemsjson.json  problemslatex.json  problemsoriginal.json  problemswithlongsolutions.json  pyproject.toml  shell.nix
.github/workflows/: cd.yaml  ci.yaml
.pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
.pgdata/base/1/: 1249_vm  1259  13468  2605_vm  2608_vm  2609  2610_vm  2616_vm  2617_vm  2618  2619  2619_fsm  2619_vm  2664  2674  2675  2684  2685  2690  2691  2696  2838  2838_vm  2840  2840_vm  2841  3085  3164  3394_vm  3395  3541_vm  3600  3602_vm  3604  3608  3609  pg_internal.init
.pgdata/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13464  13464_fsm  13464_vm  13468  13469  13469_fsm  13469_vm  13473  13474  13474_fsm  13474_vm  13478  13479  13479_fsm  13479_vm  13483  16385  16386  16390  16391  16393  16394  16397  16399  16401  16402  (+249 more)
.pgdata/base/4/: 1247  1247_vm  1259  13464_vm  13469  13473  13474  2600_vm  2603_vm  2606  2607_vm  2615  2615_vm  2619_vm  2662  2665  2679  2681  2692  2693  2696  2703  2704  2753_vm  2839  2840_vm  3079_vm  3394  (+10 more)
.pgdata/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
.pgdata/pg_xact/: 0000
abiopetaja/: asgi.py  settings_common.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
app/: admin.py  annoying.py  apps.py  constants.py  errors.py  forms.py  latex.py  math.py  maths.py  mathüksik.py  models.py  pdf.py  render.py  signals.py  tests.py  topics.py  urls.py  validators.py  validatorshilisem.py  views.py
app/migrations/: 0001_initial.py  0002_alter_testversionproblem_topic.py  0002_problem_created_at_problem_updated_at_and_more.py  0002_pset_problem_count.py  0002_remove_test_saved_test_has_name_and_more.py  0002_template_header.py  0003_alter_template_name_alter_template_title_and_more.py  0003_remove_test_template_alter_testversion_test.py  0003_test_header.py  0003_testversionproblem_spec.py  0004_alter_template_name_alter_template_title.py  0004_alter_templateproblem_topic.py  0004_rename_header_template_title_and_more.py  0005_alter_problem_kind_and_more.py  0005_alter_template_unique_together_and_more.py  0005_alter_templateproblem_topic.py  0006_alter_problem_kind_and_more.py  0006_alter_templateproblem_topic.py  0007_alter_templateproblem_topic.py  0007_problemrenderingsettings_and_more.py  0008_alter_template_title.py  0008_alter_templateproblem_topic.py  0009_delete_problemrenderingsettings.py
app/templates/: ai_generate_test_form.html
app/templatetags/: app_extras.py
app/tests/: lib.py  test_auth.py  test_download.py  test_feedback.py  test_pdf.py  test_render.py  test_template.py  test_templateproblem.py  test_test.py
authentication/: forms.py
common/: tests.py
common/templates/: 403.html  404.html  500.html
common/templatetags/: language.py
flake/: checks.nix  default.nix  deploys.nix  dev-shells.nix  nixos-configurations.nix  overlays.nix  packages.nix
flake/nixos-configurations/: base-config.nix  default.nix
flake/nixos-modules/: default.nix
flake/tests/: default.nix  test-vm-client.nix  test-vm-user.nix
infra/: .terraform.lock.hcl  main.tf  outputs.tf  public_ip
typings/sympy/: __init__.pyi
(+91 files in other folders)
